2015-01-16  Ola Jeppsson  <ola@adapteva.com>

	* labs/mem_protect/src/mpf_isr.s: Remove.
	* labs/mem_protect/src/emain.c (void mpf_isr): Replace above
	assembler page fault handler with C version.
	(int main): Simplify. Do not test stack page.
	* labs/mem_protect/src/main.c: Simplify.
	* labs/mem_protect/build.sh: Don't link with removed assembly
	mpf isr. Use linker script that will place stack in local core
	SRAM.

2015-01-16  Ola Jeppsson  <ola@adapteva.com>

	* labs/hardware_barrier/src/main.c (int main): Exit with
	failure code on detected failure.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* README.md: Add descriptions for missing directories.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* softcache/basic_math/Makefile: Adjustment of paths and cross
	compiling.
	* softcache/math_example/Makefile: Likewise.
	* softcache/basic_math/.gitignore: New file.
	* softcache/basic_math/build.sh: New file.
	* softcache/basic_math/test.sh: New file.
	* softcache/math_example/.gitignore: New file.
	* softcache/math_example/build.sh: New file.
	* softcache/math_example/test.sh: New file.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* softcache/README.md: New file.
	* softcache/basic_math/Makefile: New file.
	* softcache/basic_math/cachemanager.S: New file.
	* softcache/basic_math/e_math_test.c: New file.
	* softcache/basic_math/fast.ldf: New file.
	* softcache/basic_math/fast_cacheman.ldf: New file.
	* softcache/basic_math/math_test.c: New file.
	* softcache/math_example/Makefile: New file.
	* softcache/math_example/cachemanager.S: New file.
	* softcache/math_example/e_math_example.c: New file.
	* softcache/math_example/fast.ldf: New file.
	* softcache/math_example/fast_cacheman.ldf: New file.
	* softcache/math_example/math_example.c: New file.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* apps/hello-world/src/hello_world.c (int main): Attach to shm
	segment if it already exists, instead of failing

2015-01-15  Ola Jeppsson  <ola@adapteva.com>
